Fixed overflow issue

--- a/components/app.css
+++ b/components/app.css
@@ -100,8 +100,9 @@ ul.tree li:last-child:before {
 /* 404 Page */
 
 .NotFoundPage {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
+  overflow-x: hidden;
   position: relative;
 }
 
